82. refactor: упрощает реализацию методов в хранилищах